Touch meno toggler hideden

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -37,7 +37,7 @@
       <!-- site-head -->
       <header id="site-head" role="banner">
         <h1 id="site-title"><a href="/">LXJS <strong>2014</strong></a></h1>
-        <a href="#prime-nav" title="Show menu" class="toggle-menu"><span>Menu</span></a>
+        <!-- <a href="#prime-nav" title="Show menu" class="toggle-menu"><span>Menu</span></a> -->
         <nav id="prime-nav" role="navigation">
           <ul>
             <!-- <li><a href="{{root}}speakers" title="Visit the Speakers page">Speakers<span>:</span> <small>Incredible People</small></a></li> -->
