--- a/src/_assets/css/_settings.scss
+++ b/src/_assets/css/_settings.scss
@@ -29,13 +29,14 @@ $landscape: "only screen and (orientation: landscape)";
 $portrait: "only screen and (orientation: portrait)";
 
 // We use these as default colors throughout
-$primary-color: #0474BA;
+$primary-color: #E74C3C;
+$primary-color-dark: #B43C2E;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
 
 // We use these to control various global styles
-$base-color: #0C486D;
+$base-color: #33485D;
 $body-bg: $primary-color;
 $body-font-color: $base-color;
 $body-font-family: 'Asap', sans-serif;
