--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -37,7 +37,7 @@
       <!-- site-head -->
       <header id="site-head" role="banner">
         <h1 id="site-title"><a href="/">LXJS <strong>2014</strong></a></h1>
-        <!-- <a href="#prime-nav" title="Show menu" class="toggle-menu"><span>Menu</span></a> -->
+        <a href="#prime-nav" title="Show menu" class="toggle-menu"><span>Menu</span></a>
         <nav id="prime-nav" role="navigation">
           <ul>
             <!-- <li><a href="{{root}}speakers" title="Visit the Speakers page">Speakers<span>:</span> <small>Incredible People</small></a></li> -->
@@ -45,7 +45,7 @@
             <!-- <li><a href="{{root}}conference" title="Visit the Conference page">Conference<span>:</span> <small>Schedule and Videos</small></a></li> -->
             <!-- <li><a href="{{root}}fringe" title="Visit the Fringe page">Fringe<span>:</span> <small>Parties &amp; Other Events</small></a></li> -->
             <!-- <li><a href="{{root}}guide" title="Visit the Guide page">Guide<span>:</span> <small>Practical Info</small></a></li> -->
-            <!-- <li><a href="{{root}}register" title="Visit the Register page">Register<span>:</span> <small>Get Your Ticket</small></a></li> -->
+            <li><a href="{{root}}register" title="Visit the Register page">Register<span>:</span> <small>Get Your Ticket</small></a></li>
           </ul>
         </nav>
       </header>
