--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -44,7 +44,7 @@
             <!-- <li><a href="/workshops" title="Visit the Workshops page">Workshops<span>:</span> <small>Lots of Action</small></a></li> -->
             <!-- <li><a href="/conference" title="Visit the Conference page">Conference<span>:</span> <small>Schedule and Videos</small></a></li> -->
             <!-- <li><a href="/fringe" title="Visit the Fringe page">Fringe<span>:</span> <small>Parties &amp; Other Events</small></a></li> -->
-            <!-- <li><a href="/guide" title="Visit the Guide page">Guide<span>:</span> <small>Practical Info</small></a></li> -->
+            <li><a href="/location" title="Visit the Venue page">Location<span>:</span> <small>Venue and Lisbon</small></a></li>
             <li><a href="/register" title="Visit the Register page">Register<span>:</span> <small>Get Your Ticket</small></a></li>
           </ul>
         </nav>
