Tweets on Homepage

--- a/src/_assets/css/_page.scss
+++ b/src/_assets/css/_page.scss
@@ -1166,6 +1166,17 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+#tweets {
+	@include grid-row();
+	margin-bottom: 60px;
+	> ul {
+		list-style: none;
+	}
+	.tweet {
+		@include grid-column($columns: 12);
+	}
+}
+
 .schedule {
 	@include grid-row($behavior: nest);
 	list-style: none;
