--- a/src/_assets/css/_media.scss
+++ b/src/_assets/css/_media.scss
@@ -211,5 +211,11 @@
 			@include border-radius(4px);
 		}
 	}
-	
+	#tweets {
+		
+		margin-bottom: 60px;
+		.tweet {
+			@include grid-column($columns: 4);
+		}
+	}
 }
