ACA Video, Ben Acker

--- a/src/_assets/css/_page.scss
+++ b/src/_assets/css/_page.scss
@@ -534,7 +534,8 @@ h1, h2, h3, h4, h5, h6 {
 			}
 		}
 		&.student-tickets, 
-		&.partners, 
+		&.partners,
+		&.video,
 		&.official-hotel,
 		&.co-organizer,
 		&.music {
