--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -40,7 +40,7 @@
         <a href="#prime-nav" title="Show menu" class="toggle-menu"><span>Menu</span></a>
         <nav id="prime-nav" role="navigation">
           <ul>
-            <li><a href="/speakers" title="Visit the Speakers page">Speakers<span>:</span> <small>Incredible People</small></a></li>
+            <li><a href="/speakers" title="Visit the Speakers page">Speakers<span>:</span> <small>and Trainers</small></a></li>
             <!-- <li><a href="/workshops" title="Visit the Workshops page">Workshops<span>:</span> <small>Lots of Action</small></a></li> -->
             <!-- <li><a href="/conference" title="Visit the Conference page">Conference<span>:</span> <small>Schedule and Videos</small></a></li> -->
             <!-- <li><a href="/fringe" title="Visit the Fringe page">Fringe<span>:</span> <small>Parties &amp; Other Events</small></a></li> -->
