--- a/src/_assets/css/_page.scss
+++ b/src/_assets/css/_page.scss
@@ -319,6 +319,19 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+.thumbnails {
+	list-style: none;
+	margin: 0 0 2em 0;
+	li {
+		width: 48%;
+		float: left;
+		margin: 0 4% 1em 0;
+		&:nth-child(2n+2) {
+			margin-right: 0;
+		}
+	}
+}
+
 .mod {
 	position: relative;
 	margin-bottom: 80px;
