Fringe, Schedule, Lisbon, venue...

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -41,11 +41,12 @@
         <nav id="prime-nav" role="navigation">
           <ul>
             <li><a href="/speakers" title="Visit the Speakers page">Speakers<span>:</span> <small>and Trainers</small></a></li>
-            <!-- <li><a href="/workshops" title="Visit the Workshops page">Workshops<span>:</span> <small>Lots of Action</small></a></li> -->
-            <!-- <li><a href="/conference" title="Visit the Conference page">Conference<span>:</span> <small>Schedule and Videos</small></a></li> -->
-            <!-- <li><a href="/fringe" title="Visit the Fringe page">Fringe<span>:</span> <small>Parties &amp; Other Events</small></a></li> -->
-            <li><a href="/location" title="Visit the Venue page">Location<span>:</span> <small>Venue and Lisbon</small></a></li>
+            <li><a href="/schedule" title="Visit the Schedule page">Schedule<span>:</span> <small>Two intense days</small></a></li>
+            <li><a href="/fringe" title="Visit the Fringe page">Fringe<span>:</span> <small>Parties &amp; Other Events</small></a></li>
+            <li><a href="/location" title="Visit the Venue page">Location<span>:</span> <small>A unique Venue</small></a></li>
+            <li><a href="/lisbon" title="Visit the Lisbon page">Lisbon<span>:</span> <small>Travel, Hotels, Tips</small></a></li>
             <li><a href="/register" title="Visit the Register page">Register<span>:</span> <small>Get Your Ticket</small></a></li>
+
           </ul>
         </nav>
       </header>
