--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -61,6 +61,7 @@
               <ul class="links-list">
                 <li class="team"><a href="/team-and-contacts" title="Visit the Team &amp; Contacts page">Team &amp; Contacts<span>:</span> <small>Keep in Touch</small></a></li>
                 <li class="about"><a href="/about" title="Visit the About page">About<span>:</span> <small>The Story So Far</small></a></li>
+                <li class="yearbook"><a href="http://yearbook.lxjs.org" title="Visit the Yearbook">Yearbook<span>:</span> <small>About previous editions</small></a></li>
                 <li class="code"><a href="/code-of-conduct" title="Visit the Code of Conduct page">Code of Conduct<span>:</span> <small>Behave</small></a></li>
               </ul>
             </section>
